styles/index.css
/* ... */
tbody tr:hover  { outline: 0.2ch solid currentColor }
tbody tr:hover::before { opacity: 1.0 }
tbody tr:hover::after  { content: '◀' }

tbody tr:hover td:not(:hover) { opacity: 50% }


abbr[title] { cursor: help }
a {
  cursor: pointer;
  position: relative;
  border-radius: 0.2ch;
  display: inline-block;
  word-break: break-word;
  /* outline: 0.1em dashed currentColor; */
  -webkit-box-decoration-break: clone;
          box-decoration-break: clone;
}
a[rel=search] { cursor: help }
a[href='#'][title^=Top] {
  display: block;
  width: fit-content;
  text-decoration: none;
  margin: var(--p-margin) auto;
  padding: 1ch var(--line-height);
}

details summary { cursor: s-resize }
details details summary { z-index: 10 }
details[open] summary { cursor: n-resize }
details[open] > summary a {
  border-block-end: calc( 0.1 * var(--GOLDEN-RATIO) * 1em) solid;
}

/* PWA RELATED */
/* https://caniuse.com/user-select-none */
/* TODO: Use @supports - https://developer.mozilla.org/en-US/docs/Web/CSS/@supports */
/* https://developer.apple.com/library/archive/documentation/AppleApplications/Conceptual/SafariJSProgTopics/DragAndDrop.html#//apple_ref/doc/uid/30001233-178644 */
html, body {
  -webkit-user-drag: none; /* https://stackoverflow.com/q/15034842 */
  -webkit-user-select: none; /* Webkit (Chrome all / Safari all) */
          user-select: none; /* https://caniuse.com/user-select-none */
  -webkit-touch-callout: none; /* Safari Touch - https://developer.mozilla.org/en-US/docs/Web/CSS/-webkit-touch-callout */
  -webkit-tap-highlight-color: transparent; /* https://davidwalsh.name/mobile-highlight-color */
}
iframe, pre, table, select[multiple] {
  /*
    - https://css-tricks.com/almanac/properties/s/scrollbar-gutter
    - https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-gutter
    - https://bram.us/2021/07/23/prevent-unwanted-layout-shifts-caused-by-scrollbars-with-the-scrollbar-gutter-css-property
  */
  scrollbar-gutter: stable both-edges;
 }

pre, pre code, var, data, p, cite, blockquote, address
/* ... and all id-entifiable headers ... */
, header[id], h1[id], h2[id], h3[id], h4[id], h5[id], h6[id] {
  -webkit-user-drag: auto; /* https://stackoverflow.com/q/15034842 */
  -webkit-user-select: text; /* Webkit (Chrome all / Safari all) */
          user-select: text; /* https://caniuse.com/user-select-none */
  -webkit-tap-highlight-color: HighlightText; /* https://davidwalsh.name/mobile-highlight-color */
}
code, data, kbd, mark, pre, q, samp, var {
  -webkit-user-drag: auto; /* https://stackoverflow.com/q/15034842 */
  -webkit-user-select: all; /* Webkit (Chrome all / Safari all) */
          user-select: all; /* https://caniuse.com/user-select-none */
  -webkit-tap-highlight-color: HighlightText; /* https://davidwalsh.name/mobile-highlight-color */
}
pre::selection, code::selection {
  -webkit-tap-highlight-color: Mark; /* https://davidwalsh.name/mobile-highlight-color */
}

body > main   { -webkit-overflow-scrolling: touch }
body > aside  { -webkit-transform: translatez(0) }
body > footer { -webkit-transform: translatez(0) }
/* https://ferdychristant.com/the-world-s-most-overlooked-web-optimization-for-ios-d88c7517d520 */
body > footer { -webkit-transform: translatez(0) }

a { -webkit-touch-callout: default }


/* CSS3 Lists
 * https://drafts.csswg.org/css-lists-3
 * Styling lists - https://developer.mozilla.org/en-US/docs/Learn/CSS/Styling_text/Styling_lists
 */
dl, ol, ul {}

nav > dl, nav > ol, nav > ul {
  margin: var(--margin-collapse-bugfix) 0;
  padding: var(--margin-collapse-bugfix) 0;
}
dl > dl, ol > dl, ul > dl,
ol > ol, dl > ol, ul > ol,
ul > ul, dl > ul, ol > ul {
  counter-reset: ordered 0 unordered 0;
}
nav > dl::before, nav > ol::before, nav > ul::before ,
nav > dl::after, nav > ol::after, nav > ul::after  {
  margin: 1ch;
  content: '+';
  display: block;
  text-indent: 1ch;
  background: inherit;
}
aside dl, aside dl > *,
aside ol, aside ol > *,
aside ul, aside ul > *,
footer dl, footer dl > *,
footer ol, footer ol > *,
footer ul, footer ul > *
  { background: inherit }
dl {}
ul {
  list-style: inherit;
}
ol {
  list-style: ordered;
  counter-reset: ordered 0;
  counter-set: ordered 1;
}
/*
  - https://drafts.csswg.org/css-lists-3/#marker-properties
  - https://css-tricks.com/everything-you-need-to-know-about-the-gap-after-the-list-marker
*/
::marker {
  color: orange;
}
ol > li::marker { content: counters(ordered, '.') }
summary::marker { content: '🔴' }
dd, dt, li {
}
dd {}
dt {}
li {}
li li {}
ol > li, ul > li {}
ul > li {}
ol > li { counter-increment: ordered }
ul > li::after,
ol > li::after {}
ul > li::after {}
ol > li::after { content: '\232A' }


/**** COUNTERS *******
  - https://w3.org/TR/predefined-counter-styles
  - https://developer.mozilla.org/en-US/docs/Web/CSS/counters
  - https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style
  - Example Demo - https://mdn.github.io/css-examples/counter-style-demo
*/
@counter-style ordered {
  speak-as: ordered; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/speak-as */
  suffix: ') '; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/suffix */
  system: fixed; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/system */
  system: cyclic;
  system: numeric;
  system: symbolic;
  system: additive;
  system: alphabetic;

  /* Combined values
  system: fixed 3;
  system: extends decimal;
  */
}
/* ... */

